Fix subheadline width to make it break in the right place.

--- a/scss/partials/_home_page.scss
+++ b/scss/partials/_home_page.scss
@@ -41,7 +41,7 @@ div#wrap {
         padding: 0 16px;
         @include avenir_R();
         line-height: 32px;
-        max-width: 430px;
+        max-width: 550px;
         margin: 20px auto 30px;
 
         &.second-line {
